Added a bunch of features and explanations about how to implemnet and configure different pieces in the Spring world

--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css}" >
-<script th:src="/webjars/jquery/3.2.1/jquery.min.js"></script>
-<script th:src="/webjars/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<script th:src="@{//webjars/jquery/3.2.1/jquery.min.js}"></script>
+<script th:src="@{//webjars/bootstrap/4.1.0/js/bootstrap.min.js}"></script>
 <title>Recipe Home</title>
 </head>
 <body>
 	<h1>My Recipes!</h1>
-
+	<p>These are all the recipes</p>
 	<table>
 		<thead>
 			<tr>
